ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/TR_Technical_Design__c.object-meta.xml
<CustomObject>
    <label>Technical Design</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Design Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>