ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Apex_Classes__c.field-meta.xml
<CustomField>
    <fullName>TR_Apex_Classes__c</fullName>
    <inlineHelpText>A list of apex classes (incuding test classes) used by this design</inlineHelpText>
    <label>Apex Classes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>