ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Apex_Trigger__c.field-meta.xml
<CustomField>
    <fullName>TR_Apex_Trigger__c</fullName>
    <inlineHelpText>A list of APEX triggers used by this design</inlineHelpText>
    <label>Apex Trigger</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>