ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_Approval_Date__c</fullName>
    <inlineHelpText>Date this has been approved by SME</inlineHelpText>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>