ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Complexity__c.field-meta.xml
<CustomField>
    <fullName>TR_Complexity__c</fullName>
    <inlineHelpText>This will determine the amount of risk and amount of detailed design required</inlineHelpText>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>