ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Data_Model__c.field-meta.xml
<CustomField>
    <fullName>TR_Data_Model__c</fullName>
    <inlineHelpText>Diagram or description of the Data Model relationships (ERD)</inlineHelpText>
    <label>Data Model</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>