ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Design_Name__c.field-meta.xml
<CustomField>
    <fullName>TR_Design_Name__c</fullName>
    <label>Design Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>