ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Design_Type__c.field-meta.xml
<CustomField>
    <fullName>TR_Design_Type__c</fullName>
    <label>Design Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SObject</fullName>
            </value>
            <value>
                <fullName>Setting</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Profile/Permission</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>