ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Fields__c.field-meta.xml
<CustomField>
    <fullName>TR_Fields__c</fullName>
    <inlineHelpText>A list of fields (by Object, Record Type) used by this design</inlineHelpText>
    <label>Fields</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>