ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Flows__c.field-meta.xml
<CustomField>
    <fullName>TR_Flows__c</fullName>
    <label>Flows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>