ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Lightning_Page__c.field-meta.xml
<CustomField>
    <fullName>TR_Lightning_Page__c</fullName>
    <description>List here any lightning page created or updated in this design</description>
    <inlineHelpText>List here any lightning page created or updated in this design</inlineHelpText>
    <label>Lightning Page (Flexi Page)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>