ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Lightning_Web_Component__c.field-meta.xml
<CustomField>
    <fullName>TR_Lightning_Web_Component__c</fullName>
    <label>Lightning Web Component</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>