ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Objects__c.field-meta.xml
<CustomField>
    <fullName>TR_Objects__c</fullName>
    <inlineHelpText>A list of Objects used by this design</inlineHelpText>
    <label>Objects</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>