ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Other_Components__c.field-meta.xml
<CustomField>
    <fullName>TR_Other_Components__c</fullName>
    <inlineHelpText>A list of other components related to this design (e.g. Email Templates, SAP scripts etc)</inlineHelpText>
    <label>Other Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>