ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Overview__c.field-meta.xml
<CustomField>
    <fullName>TR_Overview__c</fullName>
    <inlineHelpText>Descriptive overview of the design (e.g. how is it intended to work or be used?), including any process steps or key dependencies</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>