ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Page_Layouts__c.field-meta.xml
<CustomField>
    <fullName>TR_Page_Layouts__c</fullName>
    <inlineHelpText>A list of page layouts used by this design.
Should include details if to be assigned to specific Record Types</inlineHelpText>
    <label>Page Layouts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>