ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Project__c.field-meta.xml
<CustomField>
    <fullName>TR_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>TR_Project__c</referenceTo>
    <relationshipLabel>Technical Designs</relationshipLabel>
    <relationshipName>Technical_Designs</relationshipName>
    <type>Lookup</type>
</CustomField>