ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_User_Interface_UI__c.field-meta.xml
<CustomField>
    <fullName>TR_User_Interface_UI__c</fullName>
    <inlineHelpText>User Interface components and considerations
For example; Lightning components and associated configuration/customisation details</inlineHelpText>
    <label>User Interface (UI)/Lightning</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>