ProTrackDev/force-app/main/default/objects/TR_Technical_Design__c/fields/TR_Visualforce_Pages__c.field-meta.xml
<CustomField>
    <fullName>TR_Visualforce_Pages__c</fullName>
    <inlineHelpText>A list of Visualforce pages used by this design</inlineHelpText>
    <label>Visualforce Pages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>